--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -11381,6 +11381,7 @@ pre .code {
       -ms-flex-pack: justify;
           justify-content: space-between;
   max-width: 180px;
+  color: #F85C70 !important;
 }
 
 .social-icons .social-link {
