--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -11450,15 +11450,16 @@ pre .code {
   color: #888;
 }
 
-.brand-title {
   @font-face {
     font-family: 'Amsterdam';
     font-style: normal;
     font-weight: normal;
-    src: local('Amsterdam'), url('Amsterdam.woff') format('woff');
+    src: url('Amsterdam.woff');
+}
+.brand-title {
+font-family: 'Amsterdam';
 }
 
-}
 
 @media (max-width: 991.98px) {
   .navbar .brand {
